--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -3,7 +3,11 @@
 //
 // Sass:
 // https://fontawesome.com/how-to-use/on-the-web/using-with/sass
-
+@import "generic/reset";
+@import "settings/fonts";
+@import "settings/colors";
+@import "elements/buttons";
+@import "elements/calltoaction";
 
 body{
   background-color: #BADA55;
