--- a/development/scss/elements/_calltoaction.scss
+++ b/development/scss/elements/_calltoaction.scss
@@ -3,12 +3,13 @@
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 100%;
+  max-width: 100%;
   background: $color-nav;
   color: $color-background-screen;
   font-family: $font-primary;
   line-height: 20px;
-  padding: 30px;
+  padding: 40px;
+
 
 }
 
@@ -18,12 +19,13 @@
 
  a {
   text-align: center;
+   padding: 20px;
 
   width: 150px;
   height: 50px;
   color: $color-background-screen;
   margin-top: 15px;
-  line-height: 10px;
+  line-height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
