--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -8,6 +8,7 @@
 @import "settings/colors";
 @import "elements/buttons";
 @import "elements/calltoaction";
+@import "elements/newsletter";
 
 body{
   background-color: #BADA55;
