--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -9,6 +9,7 @@
 @import "elements/buttons";
 @import "elements/calltoaction";
 @import "elements/newsletter";
+@import "elements/footer";
 
 body{
   background-color: #BADA55;
