--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -4,6 +4,8 @@
 // Sass:
 // https://fontawesome.com/how-to-use/on-the-web/using-with/sass
 
+@import "Elements/header";
+
 
 body{
   background-color: #BADA55;
