--- a/development/scss/settings/_fonts.scss
+++ b/development/scss/settings/_fonts.scss
@@ -2,3 +2,6 @@ $font-primary: 'Open Sans', sans-serif;
 $font-logo: 'Charmonman', cursive;
 $font-base-size: 14px;
 $line-height: 20px;
+
+//FontAwesome
+$fa-font-path: "../fonts/webfonts"
