done feature 14, add 3columns arrticle

--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -6,5 +6,6 @@
 @import "development/scss/generic/reset";
 @import "development/scss/settings/fonts";
 @import "development/scss/settings/colors";
+@import "development/scss/elements/features";
 
 
