--- a/development/scss/elements/_features.scss
+++ b/development/scss/elements/_features.scss
@@ -1,3 +1,50 @@
-.features-text p {
+@import "development/scss/settings/colors";
+@import "development/scss/settings/fonts";
+.container {
+  display: flex;
+  max-width: 100%;
+  justify-content: center;
+  align-content: center;
+  height: 500px;
+  background: $color-background-screen;
+  font-family: $font-primary;
+  }
+
+.features-article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.features-article i {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.features-title {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   font-size: 2rem;
+  padding: 20px;
+  color: grey;
+}
+
+.features-text {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  width: 270px;
+  font-size: 1.2rem;
+  color: grey;
+  padding: 10px;
+}
+i {
+  font-size: 4rem;
+  padding: 40px;
+  color: grey;
 }
