--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -10,6 +10,7 @@
 @import "development/scss/elements/calltoaction";
 @import "development/scss/elements/newsletter";
 @import "development/scss/elements/footer";
+@import "development/scss/elements/aboutMe";
 
 body{
   background-color: #BADA55;
