add:carousel, low-level animations

--- a/development/scss/settings/_colors.scss
+++ b/development/scss/settings/_colors.scss
@@ -6,4 +6,4 @@ $color-message-info: #3498DB; // kolor wiadomości typu info,
 $color-message-warning: #FFB03B; // kolor wiadomości typu warning
 $color-message-success: #468966; // kolor wiadomości typu success
 $color-basket-icon: #BD4932; // kolor ikony kosza
-$color-text-tab: #A1A194; // kolor tekstu z wierszy w tabelach, ikony rozszerzonych funkcji
+$color-text-tab: #dbdbd2; // kolor tekstu z wierszy w tabelach, ikony rozszerzonych funkcji
