--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -11,7 +11,8 @@
 @import "development/scss/elements/newsletter";
 @import "development/scss/elements/footer";
 @import "development/scss/elements/features";
-@import "development/scss/Elements/header";
+@import "development/scss/elements/header";
+@import "development/scss/elements/_carousel.scss";
 
 
 
