--- a/development/scss/app/elements/_content.scss
+++ b/development/scss/app/elements/_content.scss
@@ -11,20 +11,35 @@
 
 .desktop {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: green;
+  background:url("development/images/backgroundpage2.png");
 }
 
 .recipes {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  background:url("development/images/backgroundpage2.png");
 }
 
 .plans {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background:url("development/images/backgroundpage2.png");
+}
+
+.main-content-centered{
+  width:90%;
+  height:90%;
+  display: flex;
+  background:white;
+  border:2px dotted $color-text-tab;
 }
