--- a/development/scss/elements/_footer.scss
+++ b/development/scss/elements/_footer.scss
@@ -9,6 +9,7 @@
   line-height: 20px;
   font-family: $font-primary;
   flex-wrap: nowrap;
+  width: 100%;
 }
 
 h3 {
@@ -79,31 +80,31 @@ body > footer > div.footer_copyright > div{
   }
 }
 body > footer > div.footer_container > div:nth-child(3)>h3{
-  margin-left: 60px;
+  padding-left: 60px;
 }
 body > footer > div.footer_container > div:nth-child(3){
-  margin-right: -121px;
+  padding-left: -121px;
 }
 body > footer > div.footer_container > div:nth-child(1) {
-  margin-right: 58px;
-  margin-left: 4px;
+  padding-right: 58px;
+  padding-left: 4px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(3) > i{
-  margin-right: 196px;
+  padding-right: 196px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(2) > i{
-  margin-right: 35px;
+  padding-right: 35px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_form > input.footer_submit.btn{
-  margin-left: -5px;
+  padding-left: -5px;
   height: 45px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(1) > i{
-  margin-top: -55px;
+  padding-top: -55px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(2)>i{
-  margin-top: -55px;
+  padding-top: -55px;
 }
 body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(3) > i{
-  margin-top: -55px;
+  padding-top: -55px;
 }
