--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -11,15 +11,16 @@
 @import "development/scss/elements/newsletter";
 @import "development/scss/elements/footer";
 @import "development/scss/elements/features";
-@import "development/scss/Elements/header";
+@import "development/scss/elements/header";
 
 
 
 
 
 
-body{
-  background-color: #BADA55;
+.application-container{
+  width:100%;
+  height:100vh;
 }
 
 
