--- a/development/scss/app/elements/_notificationwidget.scss
+++ b/development/scss/app/elements/_notificationwidget.scss
@@ -1,14 +1,16 @@
 section.notification-w-container {
-  height: 300px; //TODO change when container will be ready to 100%
-  width: 50%;
+  height: 100%;
+  width: 40%;
   display: flex;
   align-items: center;
 
 
   ul.notification-w-list {
-    width: 80%;
+    height:100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
 
@@ -31,12 +33,12 @@ section.notification-w-container {
 }
 
 %baseWidgetLiStyling {
-  margin:10px 0;
+
   font-size: $font-base-size*1.5;
   font-weight:700;
   font-family: $font-primary;
   width: 100%;
-  height: 40px;
+
   display: flex;
   align-items: center;
   justify-content: flex-start;
