--- a/development/scss/elements/_header.scss
+++ b/development/scss/elements/_header.scss
@@ -1,68 +1,86 @@
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 90px;
-  background-color: $color-nav;
-  width: 100%;
+*{
+  box-sizing: border-box;
+}
+
+
+
+.header {
+
+ height: 90px;
+ width: 100%;
 
 
 }
 
 .header_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  max-width: 100%;
-}
-.page-logo{
-  margin-left: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+   width: 100%;
+   background-color: $color-nav;
+ }
+ .page-logo {
+
   font-size: 30px;
-}
-@import url('https://fonts.googleapis.com/css?family=Charmonman');
-h1{
-  font-family: Charmonman;
-}
-body{
-  background-color: #292F32;
-}
-#first{
-  font-weight:100;
-  color: white;
-}
-#second{
-  color:#E58A20;
-  font-weight: 700;
-}
-
-.page-nav {
-  justify-content: right;
-  height: 100%;
-
-}
-
-.page-nav-list {
-  display: flex;
-  list-style-type: none;
-  height: 100%;
-}
-
-.nav__element {
-  padding: 0 26px;
-}
-.nav__link {
-  text-transform: uppercase;
-  text-decoration: none;
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  color: $color-text-col;
-  font-size: 20px;
-
-  &:hover {
-    color: $color-bottom;
-    border-color: $color-nav;
-  }
 }
+
+ @import url('https://fonts.googleapis.com/css?family=Charmonman');
+
+  h1 {
+    font-family: Charmonman;
+  }
+
+  body {
+    background-color: #292F32;
+  }
+
+  #first {
+    font-weight: 100;
+    color: white;
+    width: 100%;
+  }
+
+  #second {
+    color: #E58A20;
+    font-weight: 700;
+    width: 100%;
+  }
+
+  .page-nav {
+
+    height: 100%;
+    width: 100%;
+
+  }
+
+  .page-nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    height: 100%;
+    width: 100%;
+  }
+
+
+
+
+
+  .nav__link {
+    text-transform: uppercase;
+    text-decoration: none;
+
+
+    display: flex;
+    align-items: center;
+    color: $color-text-col;
+    font-size: 20px;
+
+    &:hover {
+      color: $color-bottom;
+      border-color: $color-nav;
+    }
+  }
+
