--- a/development/scss/elements/_calltoaction.scss
+++ b/development/scss/elements/_calltoaction.scss
@@ -1,30 +1,42 @@
+*{
+  box-sizing: border-box;
+}
+
+.calltoaction{
+  width: 100%;
+}
+
 .call_container {
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  max-width: 100%;
+  width: 100%;
   background: $color-nav;
   color: $color-background-screen;
   font-family: $font-primary;
   line-height: 20px;
-  padding: 40px;
+  height: 150px;
 
 
 }
+.call_text {
 
+
+
+}
  p {
   margin-top: 15px;
 }
 
  a {
   text-align: center;
-   padding: 20px;
+
 
   width: 150px;
   height: 50px;
   color: $color-background-screen;
-  margin-top: 15px;
+
   line-height: 20px;
    display: flex;
    justify-content: center;
