--- a/development/scss/elements/_newsletter.scss
+++ b/development/scss/elements/_newsletter.scss
@@ -1,12 +1,19 @@
-.newsletter {
-  max-width: 100%;
+*{
+  box-sizing: border-box;
+}
+.newsletter{
+  width: 100%;
+}
+
+.newsletter_container {
+  width: 100%;
 
   height: 160px;
   background-color: $color-nav;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 0 45px;
+
 
   .newstext {
     color: #ffffff;
@@ -21,8 +28,7 @@
   }
 
   input {
-    width: 200px;
-    height: 44px;
+
     font-size: 1.5rem;
   }
 
