--- a/development/scss/elements/_footer.scss
+++ b/development/scss/elements/_footer.scss
@@ -1,62 +1,76 @@
+*{
+  box-sizing: border-box;
+}
+.footer{
+  width: 100%;
+
+}
 .footer_container {
   display: flex;
-  justify-content: space-around;
-
+  justify-content: center;
+  align-items: center;
   background: $color-nav;
   color: $color-background-screen;
-  max-width: 100%;
-  padding: 20px;
   line-height: 20px;
   font-family: $font-primary;
-  flex-wrap: nowrap;
+  height: 300px;
   width: 100%;
 }
+
+
 
 h3 {
   font-size: 1.5rem;
   margin: 20px 0px 15px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 ul {
   list-style: disc;
+
 }
 
 
 .footer_text {
-  max-width: 400px;
+ width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   p {
-    max-width: 250px;
+   width: 100%;
   }
 
 }
 
 .footer_copyright {
   background: $color-text-col;
-  padding: 20px;
   text-align: center;
   color: $color-background-screen;
-  max-width: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 25px;
+  height: 100%;
 }
 
 .footer_webpage {
   color:  #E58A20;
 }
 body > footer > div.footer_copyright > div{
-  margin-top: 15px;
+
 }
 .footer_input {
   display: inline-block;
-  height: 40px;
+
 
 }
 
 .footer_submit {
-  height: 40px;
+
 
   color: $color-background-screen;
 
@@ -64,47 +78,22 @@ body > footer > div.footer_copyright > div{
 
 .footer_socialmedia {
   font-size: 2rem;
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
   a:first-child {
-    margin-left: 0px;
+
 
   }
 
   a {
-    margin-left: 40px;
+
     color: $color-background-screen;
   }
 }
-body > footer > div.footer_container > div:nth-child(3)>h3{
-  padding-left: 60px;
-}
-body > footer > div.footer_container > div:nth-child(3){
-  padding-left: -121px;
-}
-body > footer > div.footer_container > div:nth-child(1) {
-  padding-right: 58px;
-  padding-left: 4px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(3) > i{
-  padding-right: 196px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(2) > i{
-  padding-right: 35px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_form > input.footer_submit.btn{
-  padding-left: -5px;
-  height: 45px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(1) > i{
-  padding-top: -55px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(2)>i{
-  padding-top: -55px;
-}
-body > footer > div.footer_container > div:nth-child(3) > div.footer_socialmedia > a:nth-child(3) > i{
-  padding-top: -55px;
+i{
+  width: 100%;
 }
