--- a/development/scss/elements/_footer.scss
+++ b/development/scss/elements/_footer.scss
@@ -22,9 +22,7 @@
 h3 {
   font-size: 1.5rem;
   margin: 20px 0px 15px 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
 }
 
 ul {
@@ -37,13 +35,18 @@ ul {
  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  height: 100%;
 
   p {
    width: 100%;
+    height: 100%;
   }
+  ul{
 
+    height: 100%;
+  }
 }
 
 .footer_copyright {
